fix(www): No `overflow-x: hidden` on `.block__bear`.
Otherwise you get no bear.

--- a/packages/www/styles/layout.scss
+++ b/packages/www/styles/layout.scss
@@ -8,7 +8,6 @@ html, body {
 
 .block__bear {
     position: relative;
-    overflow-x: hidden;
 }
 
 li {
